# RustQuant

./: Cargo.toml
docs/: 00-design-overview.md  01-core-design.md  02-data-design.md  03-strategy-design.md  04-execution-design.md  05-storage-design.md  06-backtest-design.md  07-monitor-design.md  08-utils-design.md  09-ai-agent-design.md  INDEX.md  README.md
